# portfolio-backend

./: .gitignore  .gitlab-ci.yml  .releaserc.json  .releaserc.yml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Pipfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  test
_app/: build-railway-docker.sh  build.sh  gunicorn.cfg.py  pyproject.toml  requirements.txt  vercel.json
_app/portfolio/: admin.py  api_views.py  apps.py  models.py  serializers.py  settings.py  translation.py  urls.py  wsgi.py
_app/portfolio/migrations/: 0001_initial.py  0002_resume.py  0002_service_description_en_service_description_fr_and_more.py  0002_service_short_description.py  0003_delete_blogpostcomment.py  0003_remove_service_details_en_remove_service_details_fr_and_more.py  0003_rename_position_experience_contract_type.py  0004_experience_client.py  0004_remove_servicedetail_order.py  0005_blogpost_lifeevent_project_remove_blog_category_and_more.py  0005_remove_expertise_skill_expertise_skill.py  0006_education_order_experience_order_expertise_order_and_more.py  0006_rename_comment_blogpostcomment.py  0007_alter_project_order_alter_service_order.py  0007_rename_name_skill_title_remove_education_order_and_more.py  0008_education_order_experience_order_expertise_order_and_more.py  0009_rename_lang_language_title_and_more.py  0010_remove_skill_order.py  0011_service_image.py  0012_service_url.py  0013_expertise_image_expertise_url.py  0014_experience_description_experience_location.py  0015_alter_experience_client_alter_experience_location_and_more.py  0016_alter_education_end_date_alter_education_school_name_and_more.py  0017_alter_expertise_url_projet.py  0018_alter_projet_description.py  0019_projet_image.py  (+13 more)
(+2 files in other folders)
