[tool.poetry]
name = "portfolio-backend"
version = "0.1.0"
description = ""
authors = ["Ousmane <ousmane.209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
gunicorn = "*"
psycopg2-binary = "*"
redis = "*"
hiredis = "*"
whitenoise = {extras = ["brotli"], version = "*"}
djangorestframework = "*"
django-rest-knox = "*"
django-cors-headers = "*"
pillow = "*"
django-storages = {extras = ["azure"], version = "*"}
python-dotenv = "*"
poetry-plugin-dotenv = "^0.5.3"
django-minio-backend = "^3.7.2"
django-modeltranslation = "^0.19.11"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}


[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "^1.12"
flake8 = "*"
flake8-quotes = "*"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
